--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span class="heading-3">Digital Marketing</span>
                     <span class="heading-4">Strategy</span>
                 </h1>
-                <p class="banner-paragraph">Lorem,ipsum dolor.</p>
+                <p class="banner-paragraph">HII, I'm SAGARA.</p>
                 <button class="banner-btn">click me</button>
             </div>
         </section>
