make navbar work and add animations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,30 @@
 </head>
 
 <body>
-
+    <!-- navbar -->
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#">
+                <span>S</span>agara<span>S</span>oftware
+            </a>
+        </div>
+        <div class="nav-list">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Pricing</a>
+            <a href="#" class="nav-link">Blog</a>
+            <a href="#" class="nav-link">Contact</a>
+        </div>
+    </nav>
+    <!-- end of navbar -->
+    <!-- Menu -->
+    <div class="menu">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+    </div>
+    <!-- end of Menu -->
+    
     <div class="container">
 
         <!-- section-1 -->
