created and styled abouit us section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,33 @@
             </div>
         </section>
         <!-- end of section-1 -->
-
+        <!-- section - 2 -->
+        <section class="section-2">
+            <h1 class="section-heading">About Us</h1>
+            <div class="section-heading-line"></div>
+            <div class="video-wrapper">
+                <video src="./videos/pexels-polina-tankilevitch-6988813.mp4" class="video" ></video>
+                <div class="controls">
+                    <div class="video-bar-wrapper">
+                        <div class="video-bar"></div>
+                    </div>
+                    <div class="buttons">
+                        <button>
+                            <i class="far fa-play-circle"></i>
+                        </button>
+                    </div>
+                </div>
+                
+            </div>
+            <p class="section-2-paragraph">
+                <i class="fas fa-quote-left"></i>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa consequatur debitis 
+                doloremque voluptates molestiae quasi accusamus veritatis est, repellat ratione eaque 
+                adipisci doloribus provident optio reprehenderit! Iusto quis est velit?
+                <i class="fas fa-quote-right"></i>
+            </p>
+        </section>
+        <!-- end of section - 2 -->
 
 
     </div>
