--- a/index.html
+++ b/index.html
@@ -82,7 +82,87 @@
             </p>
         </section>
         <!-- end of section - 2 -->
+        <!-- section-3 -->
+            <section class="section-3">
+                <h1 class="section-heading">Pricing</h1>
+                <div class="section-heading-line"></div>
+                <div class="pricing-card-wrapper">
+                    <div class="pricing-card">
+                        <div class="pricing-card-front">
+                            <h1 class="pricing-card-heading heading-free">FREE</h1>
+                            <h3 class="pricing-card-price">$0</h3>
+                            <ul class="pricing-card-list list-free">
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
+                            </ul>
+                            <button class="pricing-card-btn btn-free"></button>
+                        </div>
+                        <div class="pricing-card-back back-free">
+                            <a href="#">order now</a>
+                        </div>
+                    </div>
+                    <div class="pricing-card">
+                        <div class="pricing-card-front">
+                            <h1 class="pricing-card-heading heading-basic">BASIC</h1>
+                            <h3 class="pricing-card-price">$30</h3>
+                            <ul class="pricing-card-list list-basic">
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
+                            </ul>
+                            <button class="pricing-card-btn btn-basic"></button>
+                        </div>
+                        <div class="pricing-card-back back-basic">
+                            <a href="#">order now</a>
+                        </div>
+                    </div>
+                    <div class="pricing-card">
+                        <div class="pricing-card-front">
+                            <h1 class="pricing-card-heading heading-standard">STANDARD</h1>
+                            <h3 class="pricing-card-price">$500</h3>
+                            <ul class="pricing-card-list list-standard">
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                            </ul>
+                            <button class="pricing-card-btn btn-standard"></button>
+                        </div>
+                        <div class="pricing-card-back back-standard">
+                            <a href="#">order now</a>
+                        </div>
+                    </div>
+                    <div class="pricing-card">
+                        <div class="pricing-card-front">
+                            <h1 class="pricing-card-heading heading-premium">PREMIUM</h1>
+                            <h3 class="pricing-card-price">$999</h3>
+                            <ul class="pricing-card-list list-premium">
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                            </ul>
+                            <button class="pricing-card-btn btn-premium"></button>
+                        </div>
+                        <div class="pricing-card-back back-premium">
+                            <a href="#">order now</a>
+                        </div>
+                    </div>
+                    
+                </div>
+            </section>
 
+
+
+        <!-- end of section-3 -->
 
     </div>
 
