3d swiper animation added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,
     400;0,700;0,800;0,900;1,100;1,200;1,300;1,600;1,700;1,800;1,900&family=Mate+SC&display=swap
     " rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+
     <title>sagara buisness agency</title>
 </head>
 
@@ -86,71 +88,72 @@
             <section class="section-3">
                 <h1 class="section-heading">Pricing</h1>
                 <div class="section-heading-line"></div>
-                <div class="pricing-card-wrapper">
-                    <div class="pricing-card">
+                <div class="swiper-container">
+                <div class="pricing-card-wrapper swiper-wrapper">
+                    <div class="pricing-card swiper-slide">
                         <div class="pricing-card-front">
                             <h1 class="pricing-card-heading heading-free">FREE</h1>
                             <h3 class="pricing-card-price">$0</h3>
                             <ul class="pricing-card-list list-free">
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-times"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-times"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-times"></i><span>pricing card item</span></li>
                             </ul>
-                            <button class="pricing-card-btn btn-free"></button>
+                            <button class="pricing-card-btn btn-free">choose plan</button>
                         </div>
                         <div class="pricing-card-back back-free">
                             <a href="#">order now</a>
                         </div>
                     </div>
-                    <div class="pricing-card">
+                    <div class="pricing-card swiper-slide">
                         <div class="pricing-card-front">
                             <h1 class="pricing-card-heading heading-basic">BASIC</h1>
                             <h3 class="pricing-card-price">$30</h3>
                             <ul class="pricing-card-list list-basic">
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-times"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-times"></i><span>pricing card item</span></li>
                             </ul>
-                            <button class="pricing-card-btn btn-basic"></button>
+                            <button class="pricing-card-btn btn-basic">choose plan</button>
                         </div>
                         <div class="pricing-card-back back-basic">
                             <a href="#">order now</a>
                         </div>
                     </div>
-                    <div class="pricing-card">
+                    <div class="pricing-card swiper-slide">
                         <div class="pricing-card-front">
                             <h1 class="pricing-card-heading heading-standard">STANDARD</h1>
                             <h3 class="pricing-card-price">$500</h3>
                             <ul class="pricing-card-list list-standard">
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
                             </ul>
-                            <button class="pricing-card-btn btn-standard"></button>
+                            <button class="pricing-card-btn btn-standard">choose plan</button>
                         </div>
                         <div class="pricing-card-back back-standard">
                             <a href="#">order now</a>
                         </div>
                     </div>
-                    <div class="pricing-card">
+                    <div class="pricing-card swiper-slide">
                         <div class="pricing-card-front">
                             <h1 class="pricing-card-heading heading-premium">PREMIUM</h1>
                             <h3 class="pricing-card-price">$999</h3>
                             <ul class="pricing-card-list list-premium">
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
-                                <li><i class="fas fa-check"><span>pricing card item</span></i></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
+                                <li><i class="fas fa-check"></i><span>pricing card item</span></li>
                             </ul>
-                            <button class="pricing-card-btn btn-premium"></button>
+                            <button class="pricing-card-btn btn-premium">choose plan</button>
                         </div>
                         <div class="pricing-card-back back-premium">
                             <a href="#">order now</a>
@@ -158,6 +161,7 @@
                     </div>
                     
                 </div>
+            </div>
             </section>
 
 
@@ -170,7 +174,7 @@
 
 
 
-
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="./script.js"></script>
 </body>
 
