footer created with navigation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
 
         <!-- section-1 -->
-        <section class="section-1">
+        <section class="section-1" id="home">
             <div class="banner">
                 <h1 class="banner-heading">
                     <span class="heading-1">Buisness Ideas</span>
@@ -58,7 +58,7 @@
         </section>
         <!-- end of section-1 -->
         <!-- section - 2 -->
-        <section class="section-2">
+        <section class="section-2" id="about-us">
             <h1 class="section-heading">About Us</h1>
             <div class="section-heading-line"></div>
             <div class="video-wrapper">
@@ -85,7 +85,7 @@
         </section>
         <!-- end of section - 2 -->
         <!-- section-3 -->
-        <section class="section-3">
+        <section class="section-3" id="price">
             <h1 class="section-heading">Pricing</h1>
             <div class="section-heading-line"></div>
             <div class="swiper-container">
@@ -204,6 +204,17 @@
         </section>
         <!-- End of Section 4 -->
 
+        <footer class="footer">
+            <div>
+                <a href="#home">Home</a>
+                <a href="#about-us">About us</a>
+                <a href="#price">Pricing</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <p class="copyright">
+                copyright &copy;CodeAndCreate All Rights Reserved
+            </p>
+        </footer>
 
     </div>
 
